# receipt-scanner-model

./: .env.templete  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: setting.json
.github/workflows/: claude-code-review.yml  pre-commit.yml  tests.yml
api/: main.py
investigation/tessract_pytesseract/: actual_totals.json  predicted_totals.json  tesseract_pytesseract.py
src/receipt_scanner_model/: __init__.py  analyze.py  error.py  file_operations.py  logger_config.py  main.py  open_ai.py  parse_bytes.py  s3_client.py  scan_receipt.py  setting.py
tests/test_api/: test_main.py
tests/test_src/: test_analyze.py  test_openai.py  test_s3_client.py  test_scan_receipt.py
