[project]
name = "receipt-scanner-model"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "AyumuOgasawara"}
]
dependencies = [
    "pillow>=10.4.0",
    "opencv-python>=4.10.0.84",
    "pytesseract>=0.3.13",
    "fastapi>=0.114.0",
    "uvicorn[standard]>=0.30.6",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.7",
    "pyright>=1.1.378",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "httpx>=0.27.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/receipt_scanner_model", "investigation"]

[tool.pyright]
venvPath = "."
venv = ".venv"
